# commands-exec

./: README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/admin/: exec_shell.py
src/nagare/admin/: exec_shell.py
