[metadata]
name = nagare-commands-exec
author = Net-ng
author_email = alain.poirier@net-ng.com
description = 'nagare-admin exec' commands
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/commands-exec
    Tracker = https://github.com/nagareproject/commands-exec/issues

[options]
zip_safe = False
packages = nagare
install_requires =
    nagare-server

[options.entry_points]
nagare.commands =
    exec = nagare.admin.exec_shell:Commands

nagare.commands.exec =
    shell = nagare.admin.exec_shell:Shell
    batch = nagare.admin.exec_shell:Batch

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
